--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,37 @@
+# Compiled source #
+###################
+*.com
 *.class
-bin/aston/group17/model/VehicleTest.class
-bin/aston/group17/model/StationTest.class
-bin/aston/group17/model/Bike.class
-bin/aston/group17/model/Pump.class
-bin/aston/group17/model/Till.class
-bin/aston/group17/simulator/Simulator.class
-bin/aston/group17/model/StationTest.class
-bin/aston/group17/model/Driver.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
